# assGrammarCheck

./: .gitignore  README.md  pyproject.toml
assgrammarcheck/: __init__.py  assgrammarcheck.py  cli.py
